Header pastki qismi

--- a/index.html
+++ b/index.html
@@ -1,22 +1,61 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="./assets/icons/" type="image/x-icon">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="shortcut icon" href="./assets/icons/" type="image/x-icon" />
     <title>Hackathon</title>
-    <link rel="stylesheet" href="./assets/styles/style.css">
-    <link rel="stylesheet" href="./assets/styles/output.css">
-</head>
-<body>
+    <link rel="stylesheet" href="./assets/styles/style.css" />
+    <link rel="stylesheet" href="./assets/styles/output.css" />
+  </head>
+  <body>
+    <!-- Header start -->
     <header>
+      <!-- Navbar start -->
+      <nav></nav>
+      <!-- Navbar end -->
+      <div class="flex items-center justify-between flex-wrap ">
+        <div class="buttons flex items-center">
+          <button class="w-[202px] h-[44px] flex items-center justify-center gap-3 bg-[#fff] border-2 border-solid border-[#E0DFE3] text-[#140A32] rounded-xl">
+            <img src=".//assets/icons/Path (Stroke).png" alt="" />
+            <span>Заказать звонок</span>
+          </button>
+
+          <button class="w-[144px] h-[44px] flex items-center justify-center gap-3 bg-[#33836E] border-2 border-solid border-[#4C867B] text-white rounded-xl">
+            <img src="./assets/icons/telegram (1).png" alt="" />
+            <span>Telegram</span>
+          </button>
+        </div>
+        <div class="links">
+          <ul class="flex items-center gap-8">
+            <li>
+              <a href="#" class="text-[#140A32] font-normal hover:text-[#33836E]">Отзывы</a>
+            </li>
+            <li>
+              <a href="#" class="text-[#140A32] font-normal hover:text-[#33836E]">Вопросы </a>
+            </li>
+            <li>
+              <a href="#" class="text-[#140A32] font-normal hover:text-[#33836E]" >Наши юристы</a>
+            </li>
+            <li>
+              <a href="#" class="text-[#140A32] font-normal hover:text-[#33836E]">Статьи</a>
+            </li>
+            <li>
+              <a href="#" class="text-[#140A32] font-normal hover:text-[#33836E]">Контакты</a>
+            </li>
+          </ul>
+        </div>
+        <div class="registeration flex items-center gap-3">
+          <img src="./assets/icons/user (1).png" alt="">
+          <a href="#" class="font-normal text-[#140A32] hover:text-[#33836E]">Вход / Регистрация</a>
+        </div>
+      </div>
     </header>
-    <main>
-    </main>
-    <footer>
-    </footer>
+    <!-- Header end -->
+    <main></main>
+    <footer></footer>
 
     <script src="./scripts/main.js"></script>
-</body>
+  </body>
 </html>
