--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <!-- Navbar start -->
       <nav></nav>
       <!-- Navbar end -->
-      <div class="flex items-center justify-between flex-wrap ">
+      <div class="flex items-center justify-between flex-wrap  ">
         <div class="buttons flex items-center">
           <button class="w-[202px] h-[44px] flex items-center justify-center gap-3 bg-[#fff] border-2 border-solid border-[#E0DFE3] text-[#140A32] rounded-xl">
             <img src=".//assets/icons/Path (Stroke).png" alt="" />
@@ -50,6 +50,11 @@
           <img src="./assets/icons/user (1).png" alt="">
           <a href="#" class="font-normal text-[#140A32] hover:text-[#33836E]">Вход / Регистрация</a>
         </div>
+      </div>
+      <div class="flex items-center gap-2  mt-8">
+         <a href="#" class="text-[#9694A0] font-normal hover:text-[#a2a2a5] ">Главная</a>
+        <span class="text-[#9694A0] font-normal hover:text-[#a2a2a5]">/</span>
+        <a href="#" class="text-[#9694A0] font-normal hover:text-[#a2a2a5]">Горячая линия</a>
       </div>
     </header>
     <!-- Header end -->
